--- a/tallerIIpractico3/Views/Cliente/CreateView.cshtml
+++ b/tallerIIpractico3/Views/Cliente/CreateView.cshtml
@@ -1,41 +1,58 @@
-﻿@model tallerIIpractico3.ViewModel.ClienteViewModel
+﻿@model tallerIIpractico3.ViewModel.ClienteABMViewModel
 
-
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-controller="Cliente" asp-action="CreateCliente" method="post">
-            <fieldset>
-            <legend>Nuevo Cliente</legend>
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+@if (Model.UserLog != null)
+{
+    if(Model.UserLog.Rol == "admin")
+    {
+        @await Html.PartialAsync("MenuAdmin", Model.UserLog);
+    }
+    else
+    {
+        @await Html.PartialAsync("MenuUser", Model.UserLog);
+    }
+    <hr />
+    <div class="row">
+        <div class="col-md-4">
+            <form asp-controller="Cliente" asp-action="CreateCliente" method="post">
+                <fieldset>
+                <legend>Nuevo Cliente</legend>
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Direccion" class="control-label"></label>
-                <input asp-for="Direccion" class="form-control" />
-                <span asp-validation-for="Direccion" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Telefono" class="control-label"></label>
-                <input asp-for="Telefono" class="form-control" />
-                <span asp-validation-for="Telefono" class="text-danger"></span>
-            </div>
-            </fieldset>
-            <div class="form-group">
-                <input type="submit" value="Enviar" class="btn btn-primary" />
-            </div>
-        </form>
+                <div class="form-group">
+                    <label asp-for="Cliente.Nombre" class="control-label"></label>
+                    <input asp-for="Cliente.Nombre" class="form-control" />
+                    <span asp-validation-for="Cliente.Nombre" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Cliente.Direccion" class="control-label"></label>
+                    <input asp-for="Cliente.Direccion" class="form-control" />
+                    <span asp-validation-for="Cliente.Direccion" class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Cliente.Telefono" class="control-label"></label>
+                    <input asp-for="Cliente.Telefono" class="form-control" />
+                    <span asp-validation-for="Cliente.Telefono" class="text-danger"></span>
+                </div>
+                </fieldset>
+                <div class="form-group">
+                    <input type="submit" value="Enviar" class="btn btn-primary" />
+                </div>
+            </form>
+        </div>
     </div>
-</div>
 
-<div>
-    <a asp-action="Index">Lista de Clientes</a>
-</div>
+    <div>
+        <a asp-action="Index">Lista de Clientes</a>
+    </div>
 
-@section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @section Scripts {
+        @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    }
+}else
+{
+    <script type="text/JavaScript">
+      setTimeout("location.href = 'https://localhost:44374/';",2000);
+    </script>
+
+    <p>No tiene permiso para estar en esta pagina</p>
 }
