pagina funcional, primera version, sin trabajos de css, con funcionalidades extras sobre cadetes, clientes

--- a/tallerIIpractico3/Views/Cliente/CreateView.cshtml
+++ b/tallerIIpractico3/Views/Cliente/CreateView.cshtml
@@ -42,7 +42,7 @@
     </div>
 
     <div>
-        <a asp-action="Index">Lista de Clientes</a>
+        <a asp-action="IndexCliente">Lista de Clientes</a>
     </div>
 
     @section Scripts {
