--- a/tallerIIpractico3/Views/Cliente/EditView.cshtml
+++ b/tallerIIpractico3/Views/Cliente/EditView.cshtml
@@ -52,7 +52,7 @@
     </div>
 
     <div>
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="IndexCliente">Lista de Clientes</a>
     </div>
 
     @section Scripts {
