--- a/tallerIIpractico3/Views/Logger/ErrorCreateDuplicado.cshtml
+++ b/tallerIIpractico3/Views/Logger/ErrorCreateDuplicado.cshtml
@@ -3,9 +3,8 @@
 *@
 @{
 }
-
 <script type="text/JavaScript">
-      setTimeout("location.href = '/Pedido/CreateView';",2000);
+      setTimeout("location.href = '/Cliente/IndexCliente';",4000);
 </script>
 
-<p>Los datos ingresados son incorrectos, intente nuevamente</p>
+<p>Ya posee un Cliente con el mismo nombre. Desvío a lista de Clientes </p>
