--- a/tallerIIpractico3/Views/Logger/ErrorUpdateCliente.cshtml
+++ b/tallerIIpractico3/Views/Logger/ErrorUpdateCliente.cshtml
@@ -5,7 +5,7 @@
 }
 
 <script type="text/JavaScript">
-      setTimeout("location.href = 'https://localhost:44374/Cliente/IndexCliente';",2000);
+      setTimeout("location.href = '/Cliente/IndexCliente';",2000);
 </script>
 
 <p>Los datos ingresados son incorrectos, intente nuevamente</p>
