--- a/tallerIIpractico3/Views/Logger/ErrorUpdatePedido.cshtml
+++ b/tallerIIpractico3/Views/Logger/ErrorUpdatePedido.cshtml
@@ -5,7 +5,7 @@
 }
 
 <script type="text/JavaScript">
-      setTimeout("location.href = 'https://localhost:44374/Pedido/IndexPedido';",2000);
+      setTimeout("location.href = '/Pedido/IndexPedido';",2000);
 </script>
 
 <p>Los datos ingresados son incorrectos, intente nuevamente</p>
