--- a/tallerIIpractico3/Views/Logger/IndexLogger.cshtml
+++ b/tallerIIpractico3/Views/Logger/IndexLogger.cshtml
@@ -2,6 +2,6 @@
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
 <script type="text/JavaScript">
-      setTimeout("location.href = 'https://localhost:44374/Home';",2000);
+      setTimeout("location.href = '/Home';",2000);
 </script>
 <p>Error al leer los datos del cadete o pedido. El archivo esta dañados, renombrado o no exite el dato</p>
