--- a/tallerIIpractico3/Views/Logger/ErrorAlPagarCadete.cshtml
+++ b/tallerIIpractico3/Views/Logger/ErrorAlPagarCadete.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <script type="text/JavaScript">
-      setTimeout("location.href = 'https://localhost:44374/Cadete/IndexCadete';",2000);
+      setTimeout("location.href = '/Cadete/IndexCadete';",2000);
 </script>
 
 <p>No se puede comunicar con la base datos, el cadete aun mentiene los pedidos en estado pendiente de pago</p>
