--- a/tallerIIpractico3/Views/Logger/ErrorCreateCliente.cshtml
+++ b/tallerIIpractico3/Views/Logger/ErrorCreateCliente.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <script type="text/JavaScript">
-      setTimeout("location.href = 'https://localhost:44374/Cliente/CreateView';",2000);
+      setTimeout("location.href = '/Cliente/CreateView';",2000);
 </script>
 
 <p>Los datos ingresados son incorrectos, intente nuevamente</p>
