--- a/tallerIIpractico3/Views/Logger/ErrorDeleteCadete.cshtml
+++ b/tallerIIpractico3/Views/Logger/ErrorDeleteCadete.cshtml
@@ -5,7 +5,7 @@
 }
 
 <script type="text/JavaScript">
-      setTimeout("location.href = 'https://localhost:44374/Cadete/IndexCadete';",2000);
+      setTimeout("location.href = '/Cadete/IndexCadete';",2000);
 </script>
 
 <p>No se puede comunicar con la base de datos, el cadete no fue eliminado</p>
