--- a/tallerIIpractico3/Views/Logger/ErrorDeleteCliente.cshtml
+++ b/tallerIIpractico3/Views/Logger/ErrorDeleteCliente.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <script type="text/JavaScript">
-      setTimeout("location.href = 'https://localhost:44374/Cadete/IndexCliente';",2000);
+      setTimeout("location.href = '/Cadete/IndexCliente';",2000);
 </script>
 
 <p>No se puede comunicar con la base de datos, el cadete no fue eliminado</p>
