--- a/tallerIIpractico3/Views/Logger/ErrorUpdateCadete.cshtml
+++ b/tallerIIpractico3/Views/Logger/ErrorUpdateCadete.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <script type="text/JavaScript">
-      setTimeout("location.href = 'https://localhost:44374/Cadete/IndexCadete';",2000);
+      setTimeout("location.href = '/Cadete/IndexCadete';",2000);
 </script>
 
 <p>Los datos ingresados son incorrectos, intente nuevamente</p>
