--- a/tallerIIpractico3/Views/Cadete/EditView.cshtml
+++ b/tallerIIpractico3/Views/Cadete/EditView.cshtml
@@ -17,7 +17,7 @@
     <div class="container">
         <div class="row">
             <div class="col-6">
-                <form asp-controller="Cadete" asp-action="ModificarCadete" method="post">
+                <form asp-controller="Cadete" asp-action="UpdateCadete" method="post">
                     <fieldset>
                         <legend class="">Registrar un cadete</legend>
                         <div class="mb-3">
