--- a/tallerIIpractico3/Views/Cadete/IndexCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/IndexCadete.cshtml
@@ -69,7 +69,7 @@
                         @Html.ActionLink("Pagar", "PagarACadete", item)
                     </td>
                     <td>
-                        @Html.ActionLink("Modificar", "FormUpdateCadete", item) |
+                        @Html.ActionLink("Modificar", "EditView", item) |
                         @Html.ActionLink("Eliminar", "DeleteView", item)
                     </td>
                 </tr>
