--- a/tallerIIpractico3/Views/Logger/ErrorCreateUsuario.cshtml
+++ b/tallerIIpractico3/Views/Logger/ErrorCreateUsuario.cshtml
@@ -3,8 +3,9 @@
 *@
 @{
 }
+
 <script type="text/JavaScript">
-      setTimeout("location.href = '/Cadete/CreateView';",2000);
+      setTimeout("location.href = '/Usuario/CreateView';",2000);
 </script>
 
 <p>Los datos ingresados son incorrectos, intente nuevamente</p>
