--- a/tallerIIpractico3/Views/Logger/ErrorUpdateUsuario.cshtml
+++ b/tallerIIpractico3/Views/Logger/ErrorUpdateUsuario.cshtml
@@ -4,7 +4,7 @@
 @{
 }
 <script type="text/JavaScript">
-      setTimeout("location.href = '/Cadete/CreateView';",2000);
+      setTimeout("location.href = '/Usuario/ListaDeUsuarios';",2000);
 </script>
 
 <p>Los datos ingresados son incorrectos, intente nuevamente</p>
