--- a/tallerIIpractico3/Views/Pedido/CreateView.cshtml
+++ b/tallerIIpractico3/Views/Pedido/CreateView.cshtml
@@ -18,7 +18,7 @@
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-controller="Pedido" asp-action="CreatePedido" method="post">
+            <form asp-controller="Pedido" asp-action="SavePedido" method="post">
                 <fieldset>
                 <legend>Pedido - Nuevo Cliente</legend>
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
