--- a/tallerIIpractico3/Views/Pedido/CreateViewFromCliente.cshtml
+++ b/tallerIIpractico3/Views/Pedido/CreateViewFromCliente.cshtml
@@ -18,7 +18,7 @@
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <form asp-controller="Pedido" asp-action="CreatePedidoFromCliente">
+            <form asp-controller="Pedido" asp-action="SavePedidoFromCliente">
                 <fieldset>
                 <legend>Pedido para Cliente: </legend>
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
