--- a/tallerIIpractico3/Views/Shared/MenuUser.cshtml
+++ b/tallerIIpractico3/Views/Shared/MenuUser.cshtml
@@ -11,7 +11,15 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavDropdown">
                     <ul class="navbar-nav">
-
+                        <li class="dropdown">
+                            <button class="btn btn-default" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Cadete
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" asp-controller="Cadete" asp-action="CreateView">Agregar Nuevo</a>
+                                <a class="dropdown-item" asp-controller="Cadete" asp-action="IndexCadete">Lista</a>
+                            </div>
+                        </li>
                 
                         <li class="dropdown">
                             <button class="btn btn-default" dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -29,6 +37,15 @@
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" asp-controller="Cliente" asp-action="CreateView">Agregar Nuevo</a>
                                 <a class="dropdown-item" asp-controller="Cliente" asp-action="IndexCliente">Lista</a>
+                            </div>
+                        </li>
+
+                        <li class="dropdown">
+                            <button class="btn btn-default" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                @Model.User
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item" asp-controller="Usuario" asp-action="Logout">Logout</a>
                             </div>
                         </li>
 
