--- a/tallerIIpractico3/Views/Usuario/ListaDeUsuarios.cshtml
+++ b/tallerIIpractico3/Views/Usuario/ListaDeUsuarios.cshtml
@@ -10,7 +10,8 @@
     {
         @await Html.PartialAsync("MenuAdmin", Model.UserLog);
 
-        <hr />
+        <hr/>
+        <h4>Usuarios</h4>
         <table class="table">
             <thead>
                 <tr>
