--- a/tallerIIpractico3/Views/Cadete/IndexCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/IndexCadete.cshtml
@@ -15,7 +15,7 @@
     {
         @await Html.PartialAsync("MenuUser", Model.UserLog);
     }
-
+    <hr/>
     <h4>Cadetes</h4>
     <table class="table" style="text-align:center;">
     <thead>
@@ -66,7 +66,9 @@
                         @item.Pedidos.Count()
                     </td>
                     <td style="border:solid gray 1px">
-                        @Html.ActionLink("Pagar", "PagarACadete", item)
+                        <div style="font-size:1.5em; text-decoration:none">
+                        @Html.ActionLink("Pago", "PagarACadete", item)
+                        </div>
                     </td>
                     <td>
                         @Html.ActionLink("Modificar", "EditView", item) |
