--- a/tallerIIpractico3/Views/Cliente/IndexCliente.cshtml
+++ b/tallerIIpractico3/Views/Cliente/IndexCliente.cshtml
@@ -15,10 +15,11 @@
     {
         @await Html.PartialAsync("MenuUser", Model.UserLog);
     }
-    <hr />
+    <hr/>
+    <h4>Clientes</h4>
     <div class="row">
             <div class="btn-group, col-md-2" role="group" aria-label="Basic outlined example">
-                <a button type="button" class="btn btn-outline-primary" asp-action="IndexTodosLosClientes">Todos los Clientes</a>
+                <a button type="button" class="btn btn-primary" asp-action="IndexTodosLosClientes">Todos los Clientes</a>
             </div>
             <div class="btn-group, col-md-8" role="group" aria-label="Basic outlined example">
 
@@ -26,13 +27,13 @@
                     <label for="busqueda">Buscar por: </label>
                     <input type="text" name="busqueda" id="busqueda">
 
-                    <button type="submit" class="btn btn-outline-primary">Enviar</button>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
                 </form>
 
             </div>
 
             <div class="btn-group, col-md-2" role="group" aria-label="Basic outlined example">
-                  <a button type="button" class="btn btn-outline-primary" asp-action="IndexCliente">Limpiar</a>  
+                  <a button type="button" class="btn btn-primary" asp-action="IndexCliente">Limpiar</a>  
             </div>
 
     </div>
