--- a/tallerIIpractico3/Views/Pedido/IndexBusquedaFiltrada.cshtml
+++ b/tallerIIpractico3/Views/Pedido/IndexBusquedaFiltrada.cshtml
@@ -15,10 +15,11 @@
         @await Html.PartialAsync("MenuUser", Model.UserLog);
     }
 
-    <hr />
+    <hr/>
+    <h4>Pedidos</h4>
     <div class="row">
             <div class="btn-group, col-md-2" role="group" aria-label="Basic outlined example">
-                <a button type="button" class="btn btn-outline-primary" asp-action="IndexTodosLosPedidos">Todos los Pedidos</a>
+                <a button type="button" class="btn btn-primary" asp-action="IndexTodosLosPedidos">Todos los Pedidos</a>
             </div>
 
             <div class="btn-group, col-md-8" role="group" aria-label="Basic outlined example">
@@ -30,12 +31,12 @@
                     <label for="fechaFinal">Fecha Final</label>
                     <input type="datetime-local" name="fechaFinal" id="fechaFinal">
 
-                    <button type="submit" class="btn btn-outline-primary">Enviar</button>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
                 </form>
 
             </div>
             <div class="btn-group, col-md-2" role="group" aria-label="Basic outlined example">
-                  <a button type="button" class="btn btn-outline-primary" asp-action="IndexPedido">Limpiar</a>  
+                  <a button type="button" class="btn btn-primary" asp-action="IndexPedido">Limpiar</a>  
             </div>
 
     </div>
