finalizada la primera version

--- a/tallerIIpractico3/Views/Cadete/DeleteView.cshtml
+++ b/tallerIIpractico3/Views/Cadete/DeleteView.cshtml
@@ -13,8 +13,9 @@
     {
         @await Html.PartialAsync("MenuUser", Model.UserLog);
     }
-    <div class="text-left">
-        <p class="titulo3">¿Confirma eliminar cadete?</p>
+    <hr />
+    <div>
+        <h3>¿Confirma eliminar cadete?</h3>
     </div>
 
 
