--- a/tallerIIpractico3/Views/Cadete/IndexCadete.cshtml
+++ b/tallerIIpractico3/Views/Cadete/IndexCadete.cshtml
@@ -66,12 +66,12 @@
                         @item.Pedidos.Count()
                     </td>
                     <td style="border:solid gray 1px">
-                        <div style="font-size:1.5em; text-decoration:none">
-                        @Html.ActionLink("Pago", "PagarACadete", item)
+                        <div style="font-size:1em; text-decoration:none">
+                        @Html.ActionLink("PAGAR", "PagarACadete", item)
                         </div>
                     </td>
                     <td>
-                        @Html.ActionLink("Modificar", "EditView", item) |
+                        @Html.ActionLink("Editar", "EditView", item) |
                         @Html.ActionLink("Eliminar", "DeleteView", item)
                     </td>
                 </tr>
