--- a/tallerIIpractico3/Views/Cliente/IndexBusquedaFiltrada.cshtml
+++ b/tallerIIpractico3/Views/Cliente/IndexBusquedaFiltrada.cshtml
@@ -76,7 +76,7 @@
                     @Html.ActionLink("Tomar Pedido", "CreateViewFromCliente", "Pedido", item)
                 </td>
                 <td>
-                    @Html.ActionLink("Modificar", "EditView", item) |
+                    @Html.ActionLink("Editar", "EditView", item) |
                     @Html.ActionLink("Eliminar", "DeleteView", item)
                 </td> 
             </tr>
