--- a/tallerIIpractico3/Views/Usuario/ListaDeUsuarios.cshtml
+++ b/tallerIIpractico3/Views/Usuario/ListaDeUsuarios.cshtml
@@ -52,8 +52,8 @@
                         @Html.DisplayFor(modelItem => item.Rol)
                     </td>
                     <td>
-                        @Html.ActionLink("Edit", "EditView", item) |
-                        @Html.ActionLink("Delete", "DeleteView", item)
+                        @Html.ActionLink("Editar", "EditView", item) |
+                        @Html.ActionLink("Eliminar", "DeleteView", item)
                     </td>
                 </tr>
         }
