agrego nueva busqueda para pedidos, no lo cambio en el hosting ya que estamos sobre el tiempo de presentacion

--- a/tallerIIpractico3/Views/Shared/MenuAdmin.cshtml
+++ b/tallerIIpractico3/Views/Shared/MenuAdmin.cshtml
@@ -27,6 +27,7 @@
                             <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                                 <a class="dropdown-item" asp-controller="Pedido" asp-action="CreateView">Agregar Nuevo</a>
                                 <a class="dropdown-item" asp-controller="Pedido" asp-action="IndexPedido">Lista</a>
+                                <a class="dropdown-item" asp-controller="Pedido" asp-action="IndexPedidoByID">Lista por Cadete</a>
                             </div>
                         </li>
                         <li class="dropdown" style="margin-right:4px">
